navbar alignment animations fix

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -70,3 +70,9 @@ ol li:hover {
 .anc-bar :hover{
    text-decoration: none !important;
 }
+
+@media  (max-width:480px) {
+   .floorcon.open{
+    height:200%;
+   }
+}
